--- a/index.html
+++ b/index.html
@@ -127,7 +127,317 @@
 
 <h1>Note In Key Table </h1>
 <div id="table_feasible_notes"></div>
+  
+  <h1>String 1 Frets in Key </h1>
+<div id="string_1_index_values"></div>
+  
 <script>
+  
+ function generate_feasible_frets(){
+ var form = document.getElementById("noteForm");
+var key_signature = form.elements.key_signature.value;
+var feasible_notes = [];
+
+if (key_signature == "c_maj") {
+  feasible_notes = ["C", "D", "E", "F", "G", "A", "B" ];
+} 
+else if (key_signature == "d_maj") {
+  feasible_notes = ["D", "E", "F#", "G", "A", "B", "C#"];
+} 
+else if (key_signature == "e_maj") {
+  feasible_notes = ["E", "F#", "G#", "A", "B", "C#", "D#"];
+} 
+else if (key_signature == "f_maj") {
+  feasible_notes = ["F", "G", "A", "A#", "C", "D", "E"];
+} 
+else if (key_signature == "g_maj") {
+  feasible_notes = ["G", "A", "B", "C", "D", "E", "F#"];
+} 
+else if (key_signature == "a_maj") {
+  feasible_notes = ["A", "B", "C#", "D", "E", "F#", "G#"];
+} 
+else if (key_signature == "b_maj") {
+  feasible_notes = ["B", "C#", "D#", "E", "F#", "G#", "A#"];
+} 
+else if (key_signature == "c_sharp_maj") {
+  feasible_notes = ["C#", "D#", "F", "F#", "G#", "A#"];
+} 
+else if (key_signature == "d_sharp_maj") {
+  feasible_notes = ["D#", "F", "G", "G#", "A#", "C", "D"];
+}
+ else if (key_signature == "f_sharp_maj") {
+  feasible_notes = ["F#", "G#", "A#", "B", "C#", "D#", "E"];
+} 
+else if (key_signature == "g_sharp_maj") {
+  feasible_notes = ["G#", "A#", "C", "C#", "D#", "F", "G"];
+} 
+else if (key_signature == "a_sharp_maj") {
+  feasible_notes = ["A#", "C", "D", "D#", "F", "G", "A"];
+}
+   
+
+       var string_1_start = form.elements.string_1_start.value;
+       var string_2_start = form.elements.string_2_start.value;
+       var string_3_start = form.elements.string_3_start.value;
+       var string_4_start = form.elements.string_4_start.value;
+       var string_5_start = form.elements.string_5_start.value;
+       var string_6_start = form.elements.string_6_start.value;
+
+
+
+var string_1_notes = [];
+if (string_1_start === "a") {
+  var string_1_notes = ["A", "A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#"];
+}
+else if (string_1_start === "a_sharp") {
+  var string_1_notes = ["A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A" ];
+}
+
+else if (string_1_start === "b") {
+  var string_1_notes = ["B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#" ];
+}
+else if (string_1_start === "c") {
+  var string_1_notes = [ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B" ];
+}
+else if (string_1_start === "c_sharp") {
+  var string_1_notes = [ "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C" ];
+}
+else if (string_1_start === "d") {
+  var string_1_notes = [ "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#" ];
+}
+else if (string_1_start === "d_sharp") {
+  var string_1_notes = ["D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D" ];
+}
+else if (string_1_start === "e") {
+  var string_1_notes = ["E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#" ];
+}
+else if (string_1_start === "f") {
+  var string_1_notes = ["F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E" ];
+}
+else if (string_1_start === "f_sharp") {
+  var string_1_notes = [ "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F" ];
+}
+else if (string_1_start === "g") {
+  var string_1_notes = [ "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#" ];
+}
+else if (string_1_start === "g_sharp") {
+  var string_1_notes = [ "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#", "G" ];
+}
+
+
+var string_2_notes = [];
+if (string_2_start === "a") {
+  var string_2_notes = ["A", "A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#"];
+}
+else if (string_2_start === "a_sharp") {
+  var string_2_notes = ["A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A" ];
+}
+
+else if (string_2_start === "b") {
+  var string_2_notes = ["B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#" ];
+}
+else if (string_2_start === "c") {
+  var string_2_notes = [ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B" ];
+}
+else if (string_2_start === "c_sharp") {
+  var string_2_notes = [ "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C" ];
+}
+else if (string_2_start === "d") {
+  var string_2_notes = [ "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#" ];
+}
+else if (string_2_start === "d_sharp") {
+  var string_2_notes = ["D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D" ];
+}
+else if (string_2_start === "e") {
+  var string_2_notes = ["E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#" ];
+}
+else if (string_2_start === "f") {
+  var string_2_notes = ["F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E" ];
+}
+else if (string_2_start === "f_sharp") {
+  var string_2_notes = [ "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F" ];
+}
+else if (string_2_start === "g") {
+  var string_2_notes = [ "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#" ];
+}
+else if (string_2_start === "g_sharp") {
+  var string_2_notes = [ "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#", "G" ];
+}
+
+
+
+var string_3_notes = [];
+if (string_3_start === "a") {
+  var string_3_notes = ["A", "A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#"];
+}
+else if (string_3_start === "a_sharp") {
+  var string_3_notes = ["A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A" ];
+}
+
+else if (string_3_start === "b") {
+  var string_3_notes = ["B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#" ];
+}
+else if (string_3_start === "c") {
+  var string_3_notes = [ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B" ];
+}
+else if (string_3_start === "c_sharp") {
+  var string_3_notes = [ "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C" ];
+}
+else if (string_3_start === "d") {
+  var string_3_notes = [ "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#" ];
+}
+else if (string_3_start === "d_sharp") {
+  var string_3_notes = ["D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D" ];
+}
+else if (string_3_start === "e") {
+  var string_3_notes = ["E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#" ];
+}
+else if (string_3_start === "f") {
+  var string_3_notes = ["F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E" ];
+}
+else if (string_3_start === "f_sharp") {
+  var string_3_notes = [ "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F" ];
+}
+else if (string_3_start === "g") {
+  var string_3_notes = [ "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#" ];
+}
+else if (string_3_start === "g_sharp") {
+  var string_3_notes = [ "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#", "G" ];
+}
+
+
+var string_4_notes = [];
+if (string_4_start === "a") {
+  var string_4_notes = ["A", "A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#"];
+}
+else if (string_4_start === "a_sharp") {
+  var string_4_notes = ["A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A" ];
+}
+
+else if (string_4_start === "b") {
+  var string_4_notes = ["B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#" ];
+}
+else if (string_4_start === "c") {
+  var string_4_notes = [ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B" ];
+}
+else if (string_4_start === "c_sharp") {
+  var string_4_notes = [ "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C" ];
+}
+else if (string_4_start === "d") {
+  var string_4_notes = [ "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#" ];
+}
+else if (string_4_start === "d_sharp") {
+  var string_4_notes = ["D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D" ];
+}
+else if (string_4_start === "e") {
+  var string_4_notes = ["E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#" ];
+}
+else if (string_4_start === "f") {
+  var string_4_notes = ["F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E" ];
+}
+else if (string_4_start === "f_sharp") {
+  var string_4_notes = [ "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F" ];
+}
+else if (string_4_start === "g") {
+  var string_4_notes = [ "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#" ];
+}
+else if (string_4_start === "g_sharp") {
+  var string_4_notes = [ "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#", "G" ];
+}
+
+
+var string_5_notes = [];
+if (string_5_start === "a") {
+  var string_5_notes = ["A", "A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#"];
+}
+else if (string_5_start === "a_sharp") {
+  var string_5_notes = ["A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A" ];
+}
+
+else if (string_5_start === "b") {
+  var string_5_notes = ["B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#" ];
+}
+else if (string_5_start === "c") {
+  var string_5_notes = [ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B" ];
+}
+else if (string_5_start === "c_sharp") {
+  var string_5_notes = [ "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C" ];
+}
+else if (string_5_start === "d") {
+  var string_5_notes = [ "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#" ];
+}
+else if (string_5_start === "d_sharp") {
+  var string_5_notes = ["D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D" ];
+}
+else if (string_5_start === "e") {
+  var string_5_notes = ["E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#" ];
+}
+else if (string_5_start === "f") {
+  var string_5_notes = ["F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E" ];
+}
+else if (string_5_start === "f_sharp") {
+  var string_5_notes = [ "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F" ];
+}
+else if (string_5_start === "g") {
+  var string_5_notes = [ "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#" ];
+}
+else if (string_5_start === "g_sharp") {
+  var string_5_notes = [ "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#", "G" ];
+}
+
+
+
+var string_6_notes = [];
+if (string_6_start === "a") {
+  var string_6_notes = ["A", "A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#"];
+}
+else if (string_6_start === "a_sharp") {
+  var string_6_notes = ["A#", "B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A" ];
+}
+
+else if (string_6_start === "b") {
+  var string_6_notes = ["B", "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#" ];
+}
+else if (string_6_start === "c") {
+  var string_6_notes = [ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B" ];
+}
+else if (string_6_start === "c_sharp") {
+  var string_6_notes = [ "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C" ];
+}
+else if (string_6_start === "d") {
+  var string_6_notes = [ "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#" ];
+}
+else if (string_6_start === "d_sharp") {
+  var string_6_notes = ["D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D" ];
+}
+else if (string_6_start === "e") {
+  var string_6_notes = ["E", "F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#" ];
+}
+else if (string_6_start === "f") {
+  var string_6_notes = ["F", "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E" ];
+}
+else if (string_6_start === "f_sharp") {
+  var string_6_notes = [ "F#", "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F" ];
+}
+else if (string_6_start === "g") {
+  var string_6_notes = [ "G", "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#" ];
+}
+else if (string_6_start === "g_sharp") {
+  var string_6_notes = [ "G#", "A", "A#", "B", "C", "C#",  "D", "D#", "E", "F", "F#", "G" ];
+}
+var string_1_index_values = [];
+
+for (let i = 0; i < string_1_notes.length; i++) {
+  if (feasible_notes.includes(string_1_notes[i])) {
+    string_1_index_values.push(i);
+  }
+}
+
+
+   document.getElementById("string_1_index_values").innerHTML = JSON.stringify(string_1_index_values);
+ }
+  
+  
 function generate_feasible_notes()
 { 
 var form = document.getElementById("noteForm");
@@ -466,6 +776,7 @@ else if (string_6_start === "g_sharp") {
     event.preventDefault(); // Prevent default form submission
     generateNoteTable(); // Call the function to generate the note table
 generate_feasible_notes();
+    generate_feasible_frets();
   });
 
 </script>
