--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
 <div id="string_array"></div>
     <h1>Frets in Tabs </h1>
 <div id="fret_array"></div>
-  
+    <h1>String 1 Tabs </h1>
+<div id="string_1_tabs"></div>
+     
 <script>
   
  function generate_feasible_frets(){
@@ -508,7 +510,22 @@ for (let i = 0; i < string_1_notes.length; i++) {
       document.getElementById("string_array").innerHTML = JSON.stringify(string_array);
       document.getElementById("fret_array").innerHTML = JSON.stringify(fret_array);
 
-   
+     // Loop over the stringArray and fretArray arrays.
+   var string_1_frets = [];
+  for (let i = 0; i < string_array.length; i++) {
+    // If the value of string_array[i] is 1, add the value of fret_array[i] to the frets array.
+    if (string_array[i] === 1) {
+      string_1_frets.push(fret_array[i]);
+    } else if (fret_array[i] > 9) {
+      string_1_frets.push("- ");
+    } else {
+      string_1_frets.push("-");
+    }
+  }
+
+  // Join the frets array into a single string.
+  var string_1_tabs = string_1_frets.join(" ");
+   document.getElementById("string_1_tabs").innerHTML = JSON.stringify(string_1_tabs).slice(1, -1);;
  }
   
   
