--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html>
 <head>
-<title>Random Guitar Tabs</title>
+<title>Randomly Generated Guitar Tabs</title>
 </head>
 <body>
 
-<h1>Random Guitar Tabs</h1>
+<h1>Select Your Tuning and Key</h1>
 <form id="noteForm">
 <label for="string_1_start">String 1</label>
 <select name="string_1_start" id="string_1_start">
@@ -103,7 +103,7 @@
   <option value="g">G</option>
   <option value="g_sharp">G#</option> 
 </select>
-
+<label for="key_signature">Key</label>
 <select name="key_signature">
   <option value="c_maj">C Major</option>
   <option value="d_maj">D Major</option>
