--- a/index.html
+++ b/index.html
@@ -125,9 +125,6 @@
     <h1>Tabs</h1>
   <div id="tabs_table"></div>
  
-  
-  <h1>All Notes Table</h1>
-  <div id="noteTable"></div>
 
 <h1>Note In Key Table </h1>
 <div id="table_feasible_notes"></div>
@@ -979,7 +976,7 @@ else if (string_6_start === "g_sharp") {
 
       table_all_strings_all_notes += "</table>";
 
-      document.getElementById("noteTable").innerHTML = table_all_strings_all_notes;
+      //document.getElementById("noteTable").innerHTML = table_all_strings_all_notes;
     }
 
   // Handle form submission
