--- a/index.html
+++ b/index.html
@@ -119,15 +119,12 @@
   <option value="a_sharp_maj">A# Major</option>
 </select>
 
-  <input type="submit" value="Generate Table">
+  <input type="submit" value="Generate Tabs">
 </form>
   
     <h1>Tabs</h1>
   <div id="tabs_table"></div>
- 
 
-<h1>Note In Key Table </h1>
-<div id="table_feasible_notes"></div>
   
   <h1>String 1 Frets in Key </h1>
 <div id="string_1_index_values"></div>
@@ -702,7 +699,7 @@ else if (key_signature == "a_sharp_maj") {
 
       table_feasible_notes += "</table>";
 
-      document.getElementById("table_feasible_notes").innerHTML = table_feasible_notes; 
+     // document.getElementById("table_feasible_notes").innerHTML = table_feasible_notes; 
 } 
 
 
