--- a/index.html
+++ b/index.html
@@ -126,20 +126,6 @@
   <div id="tabs_table"></div>
 
   
-  <h1>String 1 Frets in Key </h1>
-<div id="string_1_index_values"></div>
-  
-    <h1>String 2 Frets in Key </h1>
-<div id="string_2_index_values"></div>
-    <h1>String 3 Frets in Key </h1>
-<div id="string_3_index_values"></div>
-    <h1>String 4 Frets in Key </h1>
-<div id="string_4_index_values"></div>
-    <h1>String 5 Frets in Key </h1>
-<div id="string_5_index_values"></div>
-    <h1>String 6 Frets in Key </h1>
-<div id="string_6_index_values"></div>
-  
       <h1>Strings in Tabs</h1>
 <div id="string_array"></div>
     <h1>Frets in Tabs </h1>
@@ -479,12 +465,12 @@ for (let i = 0; i < string_1_notes.length; i++) {
 }
 
 
-   document.getElementById("string_1_index_values").innerHTML = JSON.stringify(string_1_index_values);
-   document.getElementById("string_2_index_values").innerHTML = JSON.stringify(string_2_index_values);
-   document.getElementById("string_3_index_values").innerHTML = JSON.stringify(string_3_index_values);
-   document.getElementById("string_4_index_values").innerHTML = JSON.stringify(string_4_index_values);
-   document.getElementById("string_5_index_values").innerHTML = JSON.stringify(string_5_index_values);
-   document.getElementById("string_6_index_values").innerHTML = JSON.stringify(string_6_index_values);
+   //document.getElementById("string_1_index_values").innerHTML = JSON.stringify(string_1_index_values);
+   //document.getElementById("string_2_index_values").innerHTML = JSON.stringify(string_2_index_values);
+   //document.getElementById("string_3_index_values").innerHTML = JSON.stringify(string_3_index_values);
+   //document.getElementById("string_4_index_values").innerHTML = JSON.stringify(string_4_index_values);
+   //document.getElementById("string_5_index_values").innerHTML = JSON.stringify(string_5_index_values);
+   //document.getElementById("string_6_index_values").innerHTML = JSON.stringify(string_6_index_values);
    
    var all_strings_array = [1,2,3,4,5,6];
    var string_array = [];
