--- a/index.html
+++ b/index.html
@@ -125,12 +125,6 @@
     <h1>Tabs</h1>
   <div id="tabs_table"></div>
 
-  
-      <h1>Strings in Tabs</h1>
-<div id="string_array"></div>
-    <h1>Frets in Tabs </h1>
-<div id="fret_array"></div>
-
      
 <script>
   
@@ -504,8 +498,8 @@ for (let i = 0; i < string_1_notes.length; i++) {
      fret_array.push(feasible_fret_array[fret_index]);
      
 }
-      document.getElementById("string_array").innerHTML = JSON.stringify(string_array);
-      document.getElementById("fret_array").innerHTML = JSON.stringify(fret_array);
+      //document.getElementById("string_array").innerHTML = JSON.stringify(string_array);
+      //document.getElementById("fret_array").innerHTML = JSON.stringify(fret_array);
 
      // Loop over the stringArray and fretArray arrays.
    var string_1_frets = [string_1_start];
