--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h1>Tabs</h1>
   <div id="tabs_table"></div>
   
-
+This generator is a work in progress, and I want to make it useful for people like you! If you have any changes or additions you'd like to see, please click this link and submit a response to one question:
     
      <a href="https://docs.google.com/forms/d/e/1FAIpQLSflrS7UV1Stujt4CddFVNuMlSMpewhPpqmieTVom4XfezCBEw/viewform?usp=sf_link">
       <input type="submit" value = "Submit Feedback"/>  
